--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.1"
+    "@astrojs/mdx": "^0.19.7",
+    "@astrojs/preact": "^2.2.1",
+    "@astrojs/rss": "^2.4.3",
+    "@astrojs/svelte": "^3.1.0",
+    "astro": "^2.9.1",
+    "d3": "^7.8.5",
+    "d3-scale": "^4.0.2",
+    "preact": "^10.16.0",
+    "svelte": "^4.1.1"
   }
 }
